[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-hash-utils"
version = "0.1.4"
description = "Simplified hashing helpers for strings, files, and checksums"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["hash", "checksum", "sha256", "md5", "file-hash"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-hash-utils#readme"
Repository = "https://github.com/philiprehberger/py-hash-utils"
Issues = "https://github.com/philiprehberger/py-hash-utils/issues"
Changelog = "https://github.com/philiprehberger/py-hash-utils/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_hash_utils"]
